sfSandBoxCode/force-app/main/default/objects/Clone_Waste_Data__c/Clone_Waste_Data__c.object-meta.xml
<CustomObject>
    <label>Clone- Waste Data</label>
    <nameField>
        <label>Clone- Waste Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clone- Waste Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>