sfSandBoxCode/force-app/main/default/objects/Clone_Waste_Data__c/fields/Collection_Route__c.field-meta.xml
<CustomField>
    <fullName>Collection_Route__c</fullName>
    <formula>TEXT(Toilet__r.Collection_Route__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Route</label>
    <type>Text</type>
</CustomField>