sfSandBoxCode/force-app/main/default/objects/Clone_Waste_Data__c/fields/Missed_Collection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Collection_Reason__c</fullName>
    <formula>Case(Missed_Collection_Code__c, 
&quot;1&quot;,&quot;Low usage- FLT not used&quot;, 
&quot;2&quot;,&quot;Toilet Overflowed&quot;, 
&quot;3&quot;,&quot;Closed by Sanergy&quot;, 
&quot;4&quot;,&quot;Toilet Locked&quot;, 
&quot;5&quot;,&quot; &quot;, 
&quot;6&quot;,&quot;School Closed&quot;, 
&quot;7&quot;,&quot;Workman missed collection&quot;, 
&quot;8&quot;,&quot;FLO request skip or special schedule&quot;, 
&quot;9&quot;,&quot;Church or Institution Closed&quot;, 
&quot;10&quot;,&quot;Research Toilet&quot;, 
&quot;11&quot;,&quot;Other&quot;, 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missed Collection Reason</label>
    <type>Text</type>
</CustomField>