sfSandBoxCode/force-app/main/default/objects/Clone_Waste_Data__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Clone- Waste Data</relationshipLabel>
    <relationshipName>Clone_Waste_Data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>