sfSandBoxCode/force-app/main/default/objects/Clone_Waste_Data__c/fields/Total_Waste_kg_day__c.field-meta.xml
<CustomField>
    <fullName>Total_Waste_kg_day__c</fullName>
    <formula>Feces_Weight__c + Urine_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Waste(kg/day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>