sfSandBoxCode/force-app/main/default/objects/Clone_Waste_Data__c/recordTypes/Clone_Waste_Data.recordType-meta.xml
<RecordType>
    <fullName>Clone_Waste_Data</fullName>
    <active>true</active>
    <label>Clone Waste Data</label>
</RecordType>